发现改成工厂加载，并让动态模式能夹静态路由。
默认 YAML 只留一条能跑的 nameserver 路，避免再靠注释叠三种场景；Nacos 仍是可选模块。

Co-authored-by: Cursor <cursoragent@cursor.com>